Implementado impedir crear partidas con el mismo nombre. Creado administrador de partidas. Implementado todas las partidas empiezan cuando lo permite el administrador.

--- a/PL-LowerLayers/prototipo-5/client/client.html
+++ b/PL-LowerLayers/prototipo-5/client/client.html
@@ -233,7 +233,9 @@
 			<tr> <td>{{name}}</td> </tr>
 		{{/each}}
 	</table>
-	<input type="button" id="EmpezarCarca" value="Empezar"/>
+	<div id="empezarboton">
+			<p ><a id="EmpezarCarca" style="cursor:pointer;text-decoration:underline;"> Empezar </a></p>
+	</div>
 </template>
 
 
