--- a/PL-LowerLayers/prototipo-5/client/client.html
+++ b/PL-LowerLayers/prototipo-5/client/client.html
@@ -97,7 +97,10 @@
 
 <template name="input">
 	<div id="messagecont">
-		<input type="button" id="buttVideoSt" value="Start VideoChat"/>
+		<a id="buttVideoSt"  style="cursor:pointer;" class="StartVC">
+			Start VideoChat
+		</a>
+		<!--<input type="button" id="buttVideoSt" value="Start VideoChat"/>-->
 		<p> Mensaje: <input type="text" id="message" style="width:50%"></p>
 	</div>
 </template>
