reestructuración del template profile-f y diseño de la interfaz grafica de profile mediante css

--- a/PL-BlutBad/client/_index.html
+++ b/PL-BlutBad/client/_index.html
@@ -17,6 +17,7 @@
 	<link rel="stylesheet" type="text/css" href="/css/chat.css">
 	<link rel="stylesheet" type="text/css" href="/css/users-connected.css">
 	<link rel="stylesheet" type="text/css" href="/css/friends.css">
+	<link rel="stylesheet" type="text/css" href="/css/profile.css">
 	<link rel="stylesheet" type="text/css" href="/css/alien-invasion.css">
 	<link rel="stylesheet" type="text/css" href="/css/froot-wars.css">
 	<link rel="stylesheet" href="/resources/demos/style.css">
@@ -60,7 +61,7 @@
 						{{> chat}}
 						{{> profil}}
 						{{> friends}}
-						{{> hall_clarcassone}}						
+						{{> hall_clarcassone}}					
 						{{> hall_torneo}}
 						{{> usersConnected}}
 					</div>
