Buscador v1, colocación del buscador en el apartado de mi clan

--- a/PL-BlutBad/client/_index.html
+++ b/PL-BlutBad/client/_index.html
@@ -18,6 +18,7 @@
 	<link rel="stylesheet" type="text/css" href="/css/users-connected.css">
 	<link rel="stylesheet" type="text/css" href="/css/friends.css">
 	<link rel="stylesheet" type="text/css" href="/css/profile.css">
+	<link rel="stylesheet" type="text/css" href="/css/buscador.css">
 	<link rel="stylesheet" type="text/css" href="/css/alien-invasion.css">
 	<link rel="stylesheet" type="text/css" href="/css/froot-wars.css">
 	<link rel="stylesheet" href="/resources/demos/style.css">
@@ -61,6 +62,7 @@
 						{{> chat}}
 						{{> profil}}
 						{{> friends}}
+						{{> buscador}}
 						{{> hall_clarcassone}}					
 						{{> hall_torneo}}
 						{{> usersConnected}}
