--- a/PL-BlutBad/client/_index.html
+++ b/PL-BlutBad/client/_index.html
@@ -8,7 +8,7 @@
 	<!-- Scripts y CSS-->
 	<title>ISI Pakistán Gaming</title>
 
-	<link rel="shortcut icon" href="/public/images/favicon.png" >
+	<link rel="shortcut icon" href="/images/favicon.png" >
 	<!-- Scripts -->
 	<script type="text/javascript" src="compatibility/jquery-ui-1.10.3.custom.js"></script>
 	<!-- CSS-->
