Creado jugadorIA corregido game.js y el objeto tablero ahora es ObjTablero

--- a/IA-Clarcassonne/indexPruebas.html
+++ b/IA-Clarcassonne/indexPruebas.html
@@ -12,9 +12,11 @@
   		Pruebas IA
   </div>
   <script src='pruebas.js'></script>	
+  <script src='granja.js'></script>	
   <script src='engine.js'></script>
   <script src='cierraCamino.js'></script>
   <script src='cierraCastillo.js'></script>
   <script src='cierraClaustro.js'></script>
+  <script src='jugadorIA.js'></script>
 </body>
 </html>
