--- a/PL-LowerLayers/prototipo-5/client/client.html
+++ b/PL-LowerLayers/prototipo-5/client/client.html
@@ -5,16 +5,20 @@
 <body>
 	<div id="div-login-button">{{loginButtons}}</div>
 	<div id="titulo" Size="6">X-ADrian</div>
-	<div class="fb-like" data-href="http://lowerlayers.meteor.com/" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
-	<div id="subtitulo">&nbsp&nbsp&nbsp Welcome to X-ADrian platform</div><br>
+	<div id="subtitulo">Welcome to X-ADrian platform</div><br>
 	<div id="container">
    		{{> cointemp}}
 		{{> tabstemp}}
 		{{> friendsTemp}}
 		{{> chatsTabsTemp}}
    	</div>	
-
 </body>
+
+
+
+
+
+
 
 
 <template name="cointemp">
@@ -27,6 +31,7 @@
 	</div>	
 </template>
 
+
 <template name="tabstemp">
 	<div id="tabs" >
 		<ul>
@@ -37,6 +42,7 @@
 		<div id="ranking">{{> gamesrankingtemp}} {{> userstemp}} {{> byuserrankingtemp}} </div>
 	</div>
 </template>
+
 
 <template name="friendsTemp">
 		
@@ -61,12 +67,14 @@
 	
 </template>
 
+
 <template name="chatsTabsTemp">
 	<div id="chatTabs" >
 		<ul>
 		</ul>
 	</div>
 </template>
+
 
 <template name="userstemp">
 	<div id="users" >
@@ -77,6 +85,7 @@
 	</div>
 </template>
 
+
 <template name="gamesrankingtemp" >
 	<div id="gamesranking">
 		Por juegos:
@@ -85,6 +94,7 @@
 		{{/ each}}
 	</div>
 </template>
+
 
 <template name="byuserrankingtemp">
 	<div id="byuserranking">
@@ -95,15 +105,16 @@
 	</div>
 </template>
 
+
 <template name="input">
 	<div id="messagecont">
 		<a id="buttVideoSt"  style="cursor:pointer;" class="StartVC">
 			Start VideoChat
 		</a>
-		<!--<input type="button" id="buttVideoSt" value="Start VideoChat"/>-->
 		<p> Mensaje: <input type="text" id="message" style="width:50%"></p>
 	</div>
 </template>
+
 
 <template name="messagestemp" >
 	<div id="messages" style="overflow:auto;height:50%;">
@@ -113,11 +124,13 @@
 	</div>
 </template>
 
+
 <template name="roomchattemp" >
 	<div id="roomchat">
 		{{> input}}</br>{{> messagestemp}}
 	</div>
 </template>
+
 
 <template name="loguserstemp">
 	<div id="logusers">
@@ -126,6 +139,7 @@
 		{{/ each}}
 	</div>
 </template>
+
 
 <template name="gamestemp" >
 	<div id="games">
@@ -136,6 +150,7 @@
 	</div>
 
 </template>
+
 
 <template name="matchestemp">
 	<div id="matches">
@@ -152,11 +167,13 @@
 	</div>
 </template>
 
+
 <template name="alientemp">
 	<div id="aliencontainer">
 		<canvas id='aliencanvas' width='320' height='480'></canvas>
 	</div>
 </template>
+
 
 <template name="frootwarstemp">
 	<div id="frootwarscontainer" style="backgroud-color:green">
@@ -185,6 +202,7 @@
 	</div>
 </template>
 
+
 <template name="clarcassonnetemp">
         <div id="clarcassonnecontainer" >
                 <canvas id='clarcassonnecanvas' width='800' height='600'></canvas>
@@ -209,6 +227,7 @@
         </div>
 </template>
 
+
 <template name="roomgametemp">
 	<div id="roomcontainer">
 		<div class="alaputaizqtop"> 
@@ -225,9 +244,11 @@
 	</div>
 </template>
 
+
 <template name="gamenametemp">
 	{{gamename}}
 </template>
+
 
 <template name="matchnametemp">
 	{{matchname}}
@@ -257,6 +278,7 @@
 	</div>	
 </template>
 
+
 <template name="listaAmigosOfflineTemp">
 	<div id="listaAmigosOffline">
 		{{# each listaAmigosOffline}}
@@ -264,6 +286,7 @@
 		{{/ each}}
 	</div>	
 </template>
+
 
 <template name='privatemessagestemp'>
 	<div style='overflow: auto; height:250px;' class="privatemessages">
@@ -278,6 +301,7 @@
     <video id="localVideo"></video>
 </template>
 
+
 <template name="remote-videos">
-    <div id="remotesVideos"></div>
+    <span id="remotesVideos"></span>
 </template>
