Solucionado problema con el botón EmpezarCarca

--- a/PL-LowerLayers/prototipo-5/client/client.html
+++ b/PL-LowerLayers/prototipo-5/client/client.html
@@ -271,9 +271,11 @@
 			<tr> <td>{{name}}</td> </tr>
 		{{/each}}
 	</table>
+	{{#if admin}}
 	<div id="empezarboton">
 			<p ><a id="EmpezarCarca" style="cursor:pointer;text-decoration:underline;"> Empezar </a></p>
 	</div>
+	{{/if}}
 </template>
 
 
