Resueltos todos los problemas asociados al cambio del campo Jugadores del documento partidas.

--- a/PL-LowerLayers/prototipo-5/client/client.html
+++ b/PL-LowerLayers/prototipo-5/client/client.html
@@ -298,7 +298,7 @@
 	</table>
 	{{#if admin}}
 	<div id="empezarboton">
-			<p ><a id="EmpezarCarca" style="cursor:pointer;text-decoration:underline;"> Empezar </a></p>
+			<p ><button id="EmpezarCarca"> Empezar </button></p>
 	</div>
 	{{/if}}
 </template>
