Añadido inicio automático para juegos de un solo jugador, y eliminado el botón de empezar para esos juegos.

--- a/PL-LowerLayers/prototipo-5/client/client.html
+++ b/PL-LowerLayers/prototipo-5/client/client.html
@@ -296,10 +296,12 @@
 			<tr> <td>{{name}}</td> </tr>
 		{{/each}}
 	</table>
-	{{#if admin}}
-	<div id="empezarboton">
-			<p ><button id="EmpezarCarca"> Empezar </button></p>
-	</div>
+	{{#if carca}}
+		{{#if admin}}
+			<div id="empezarboton">
+				<p ><button id="EmpezarCarca"> Empezar </button></p>
+			</div>
+		{{/if}}
 	{{/if}}
 </template>
 
