Mostrar ventana 'Mis mensajes'

--- a/PL-BlutBad/client/_index.html
+++ b/PL-BlutBad/client/_index.html
@@ -19,6 +19,7 @@
 	<link rel="stylesheet" type="text/css" href="/css/friends.css">
 	<link rel="stylesheet" type="text/css" href="/css/profile.css">
 	<link rel="stylesheet" type="text/css" href="/css/buscador.css">
+	<link rel="stylesheet" type="text/css" href="/css/mis-mensajes.css">
 	<link rel="stylesheet" type="text/css" href="/css/alien-invasion.css">
 	<link rel="stylesheet" type="text/css" href="/css/froot-wars.css">
 	<link rel="stylesheet" href="/resources/demos/style.css">
@@ -62,6 +63,7 @@
 						{{> chat}}
 						{{> profil}}
 						{{> friends}}
+						{{> inbox}}
 						{{> buscador}}
 						{{> hall_clarcassone}}					
 						{{> hall_torneo}}
