muestra la pestaña tienda y se pueden cambiar puntos por isi-coins

--- a/PL-BlutBad/client/_index.html
+++ b/PL-BlutBad/client/_index.html
@@ -57,7 +57,7 @@
 						{{> torneos}} 
 						{{> juegos}} 
 						{{> ranking}} 
-						{{> comunidad}} 
+						{{> tienda}} 
 						{{> gamecontainer}}
 						{{> chat}}
 						{{> profil}}
