--- a/PL-LowerLayers/prototipo-5/client/client.html
+++ b/PL-LowerLayers/prototipo-5/client/client.html
@@ -3,7 +3,7 @@
 </head>
 
 <body>
-	<div id="div-login-button">{{> iconLoginTemp}}{{loginButtons}}</div>
+	<div id="div-login-button">{{> iconLoginTemp}}<br>{{loginButtons}}</div>
 	<div id="titulo" Size="6">X-ADrian</div>
 	<div id="subtitulo">Welcome to X-ADrian platform</div><br>
 	<div id="container">
