Mis mensajes, interfaz de la ventana para escribir los mensajes privados

--- a/PL-BlutBad/client/_index.html
+++ b/PL-BlutBad/client/_index.html
@@ -64,6 +64,7 @@
 						{{> profil}}
 						{{> friends}}
 						{{> inbox}}
+						{{> outbox}}
 						{{> buscador}}
 						{{> hall_clarcassone}}					
 						{{> hall_torneo}}
