No deja jugar a usuarios sin perfil. Cambiados todos los alert. Resuelto un fallo al salir de una partida.

--- a/PL-LowerLayers/prototipo-5/client/client.html
+++ b/PL-LowerLayers/prototipo-5/client/client.html
@@ -11,7 +11,34 @@
 		{{> tabstemp}}
 		{{> friendsTemp}}
 		{{> chatsTabsTemp}}
-   	</div>	
+   	</div>
+	<div id="dialog_birthdate" title="Rellena tu perfil.">
+  		<p>Por favor, antes de unirte a una partida rellena tu perfil.</p>
+	</div>
+	<div id="dialog_nomatches" title="No hay partidas disponibles.">
+  		<p>Lo sentimos, no hay partidas disponibles. Inténtalo más tarde.</p>
+	</div>
+
+	<div id="dialog_password" title="Partida protegida con contraseña.">
+  		<p>Partida protegida con contraseña. Debe introducir una contraseña correcta.</p>
+	</div>
+
+	<div id="dialog_fullmatch" title="Partida llena.">
+  		<p>Partida llena. Pruebe en otra partida."</p>
+	</div>
+
+	<div id="dialog_matchname" title="Ya existe.">
+  		<p>Ya existe una partida con ese nombre. Pruebe con otro.</p>
+	</div>
+
+	<div id="dialog_threeplayers" title="No hay suficientes jugadores.">
+  		<p>Se necesitan al menos tres jugadores.</p>
+	</div>
+
+	<div id="dialog_noadmin" title="No eres el administrador.">
+  		<p>No eres el administrador de esta partida. Espera hasta que el administrador comience.</p>
+	</div>
+
 </body>
 
 <template name="cointemp">
