--- a/PL-LowerLayers/prototipo-5/client/client.html
+++ b/PL-LowerLayers/prototipo-5/client/client.html
@@ -66,7 +66,7 @@
 			<li><a href="#perfil">Mi Perfil</a></li>
 		</ul>
 		<div id="juegos">{{> gamestemp}} {{> matchestemp}} {{> roomgametemp}}</div>
-		<div id="ranking">{{> gamesrankingtemp}} {{> bygamerankingtemp}} {{> byusergamerankingtemp}}</div>
+		<div id="ranking">{{> gamesrankingtemp}} {{> playerstemp}} {{> bygamerankingtemp}} {{> byuserrankingtemp}} {{> byusergamerankingtemp}}</div>
 		<div id="perfil">{{> imgmiperfiltemp}}{{> miperfiltemp}}{{> imgmodmiperfiltemp}}{{> modmiperfiltemp}}</div>
 		<div id="usuarios">{{>usuariospltemp}}</div>
 	</div>
@@ -105,15 +105,6 @@
 </template>
 
 
-<template name="userstemp">
-	<div id="users" >
-		<p>Por usuarios:</p>
-		{{# each users}}
-			<a style ="cursor:pointer;text-decoration:underline;" class="linkuserranking">{{username}}</a>
-		{{/each}}
-	</div>
-</template>
-
 <template name="gamesrankingtemp" >
 	<div id="gamesranking">
 		<p>Por juegos:</p>
@@ -123,28 +114,69 @@
 	</div>
 </template>
 
+<template name="playerstemp">
+	<div id="players" >
+		{{# if first}}
+			<p><input type='text' id='formplayer'/>
+			<button id='btnplayer'>Buscar</button></p>
+			<p>Por usuarios:</p>
+			{{# each players}}
+				<a style ="cursor:pointer;text-decoration:underline;" class="linkplayer">{{username}}</a>
+			{{/each}}
+		{{/ if}}
+	</div>
+</template>
+
 <template name="bygamerankingtemp">
 	<div id="bygameranking">
 		{{# if user_not_selected}} 
-		<p><a style ='cursor:pointer;text-decoration:underline;' class='linkback'>atras</a></p>
-		<input type='text' id='formuserranking'/>
-		<button id='btnuserranking'>Buscar</button>
-		<p>{{gameranking}}</p>
-		<table>
-			<thead>
-				<tr>
-					<th>Usuario</th>
-					<th>Puntuacion</th>
-				</tr>
-			</thead>
-			<tbody>
-				{{# each ranking}}
+			<p><a style ='cursor:pointer;text-decoration:underline;' class='linkback'>atras</a></p>
+			<input type='text' id='formplayergame'/>
+			<button id='btnplayergame'>Buscar</button>
+			<p>Usuarios:</p>
+			{{# each playersgame}}
+				<a style ="cursor:pointer;text-decoration:underline;" class="linkplayergame">{{username}}</a>
+			{{/each}}
+			<p>{{gameranking}}</p>
+			<table>
+				<thead>
 					<tr>
-						<td><a style ='cursor:pointer;text-decoration:underline;' class='linkuser'>{{user}}</a></td> <td>{{score}}</td>
+						<th>Usuario</th>
+						<th>Puntuacion</th>
 					</tr>
-				{{/ each}}
-			</tbody>
-		</table>
+				</thead>
+				<tbody>
+					{{# each ranking}}
+						<tr>
+							<td><a style ='cursor:pointer;text-decoration:underline;' class='linkuser'>{{user}}</a></td> <td>{{score}}</td>
+						</tr>
+					{{/ each}}
+				</tbody>
+			</table>
+		{{/ if}}
+	</div>
+</template>
+
+<template name="byuserrankingtemp">
+	<div id="byuserranking">
+		{{# if game_not_selected}}
+			<p><a style ='cursor:pointer;text-decoration:underline;' class='linkback'>atras</a></p>
+			<p>{{playerranking}}</p>
+			<table>
+				<thead>
+					<tr>
+						<th>Juego</th>
+						<th>Puntuacion</th>
+					</tr>
+				</thead>
+				<tbody>
+					{{# each ranking}}
+						<tr>
+							<td><a style ='cursor:pointer;text-decoration:underline;' class='linkgame'>{{game}}</a></td> <td>{{score}}</td>
+						</tr>
+					{{/ each}}
+				</tbody>
+			</table>
 		{{/ if}}
 	</div>
 </template>
@@ -153,7 +185,7 @@
 	<div id="byusergameranking">
 		{{# if user_selected}}
 		<a style ='cursor:pointer;text-decoration:underline;' class='linkback'>atras</a>
-		<p>{{gameranking.user}}-{{gameranking.name}}</p>
+		<p>{{gameranking.user}} - {{gameranking.name}}</p>
 		<table>
 			<thead>
 				<tr>
@@ -161,7 +193,7 @@
 				</tr>
 			</thead>
 			<tbody>
-				{{# each ranking2}}
+				{{# each ranking}}
 					<tr>
 						<td>{{score}}</td>
 					</tr>
@@ -171,7 +203,6 @@
 		{{/ if}}
 	</div>
 </template>
-
 
 <template name="input">
 	<div id="messagecont">
