Grafo de Ranking

--- a/PL-BlutBad/client/_index.html
+++ b/PL-BlutBad/client/_index.html
@@ -4,7 +4,7 @@
 	<meta name="author" content="ISI Pakistan" />
 	<meta name="description" content="Plataforma para juegos iteractivos" />
 	<meta name="keywords" content="game urjc isi blutbad tururu" />
-
+	<meta charset="utf-8">
 	<!-- Scripts y CSS-->
 	<title>ISI Pakistán Gaming</title>
 
@@ -22,16 +22,17 @@
 	<link rel="stylesheet" type="text/css" href="/css/mis-mensajes.css">
 	<link rel="stylesheet" type="text/css" href="/css/alien-invasion.css">
 	<link rel="stylesheet" type="text/css" href="/css/froot-wars.css">
-	<link rel="stylesheet" href="/resources/demos/style.css">
+
 	<link rel="stylesheet" type="text/css" href="/css/css-jqueryui/cupertino/jquery-ui-1.10.3.custom.css">
+
+	<script src="/js/sigma.min.js"></script>	
+	<script src="/js/sigma.forceatlas2.js"></script>
 	
-	
-	
-	<!-- Para las graficas  -->
+	<!-- Para las graficas -->
 	<script src="http://code.highcharts.com/highcharts.js"></script>
     <script src="http://code.highcharts.com/modules/exporting.js"></script>
     
-    
+ 
 </head>
 
 <body>
