--- a/PL-LowerLayers/prototipo-5/client/client.html
+++ b/PL-LowerLayers/prototipo-5/client/client.html
@@ -1,7 +1,7 @@
 <head>
 	<title>X-ADrian</title>
 	<link href="/css/jquery-ui-1.10.4.custom.css" rel="stylesheet">
-	<link rel="shortcut icon" href="/favicon.ico">
+	<link rel="shortcut icon" href="/favicon.png">
 </head>
 
 <body>
