Inicio sesión con redes sociales

--- a/PL-LowerLayers/prototipo-5/client/client.html
+++ b/PL-LowerLayers/prototipo-5/client/client.html
@@ -1,13 +1,13 @@
 <head>
-	<title>X-ADrian</title>
+	<title>LowerLayers</title>
 	<link href="/css/jquery-ui-1.10.4.custom.css" rel="stylesheet">
 	<link rel="shortcut icon" href="/favicon.png">
 </head>
 
 <body>
 	<div id="div-login-button">{{> iconLoginTemp}}<br>{{loginButtons}}</div>
-	<div id="titulo" Size="6">X-ADrian</div>
-	<div id="subtitulo">Welcome to X-ADrian platform</div><br>
+	<div id="titulo" Size="6">LowerLayers' Games</div>
+	<div id="subtitulo">Welcome to LL platform</div><br>
 	<div id="container">
    		{{> cointemp}}
 		{{> tabstemp}}
