Mejoras de la plataforma

--- a/PL-BlutBad/client/_index.html
+++ b/PL-BlutBad/client/_index.html
@@ -24,6 +24,7 @@
 	<link rel="stylesheet" type="text/css" href="/css/menu.css" >
 	<link rel="stylesheet" type="text/css" href="/css/default.css" >
 	<link rel="stylesheet" type="text/css" href="/css/chat.css">
+	<link rel="stylesheet" type="text/css" href="/css/torneos.css">
 	<link rel="stylesheet" type="text/css" href="/css/css-jqueryui/cupertino/jquery-ui-1.10.3.custom.css">
 
 	<script src="/js/sigma.min.js"></script>	
